More About Myself

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Eryn Tallador | Student Game Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,17 +20,17 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<span class="image avatar48"><img src="images/iconPic.JPG" alt="" /></span>
+							<h1 id="title">Eryn Tallador</h1>
+							<p>Student Game Developer</p>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -41,11 +41,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.facebook.com/eryngabriel.tallador/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/eryn510" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#contact" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -60,15 +59,51 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm Eryn Gabriel Tallador</h2>
+								<p>I am a 3rd year student from De La Salle University, currently taking up <br />
+								Bachelor of Science in Interactive Entertainment - Major in Game Development. <br />
+								I am eager to learn new techniques and coding architectures that would further <br/>
+								improve  my skill not only as a game developer, but also as a general developer.</p>
 							</header>
 
 							<footer>
 								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
 							</footer>
+
+						</div>
+					</section>
+
+					<!-- About Me -->
+					<section id="about" class="three">
+						<div class="container">
+
+							<header>
+								<h2>About Me</h2>
+							</header>
+
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+
+							<p align="justify" style="margin:100px">I am Eryn Gabriel Tallador, a student from De La Salle University - Manila currently taking up Bachelor of 
+							Science in Interactive Entertainment - Major in Game Development. I am in my 3rd year of undergraduate studies
+							with a CGPA of 3.446 and is expected to graduate in 2024.<br/><br/>
+
+							In our projects, I take pride on working with the frontend and backend. I mainly work on the User Interface
+							and Audio Management in our projects although I also help out in coding the logic behind our games and layout ideas
+							that would help the team in designing logic for futureproofing.<br/><br/>
+
+							I am willing to learn from companies and professionals in my field of work to improve my skillset as a developer. I aim to explore the different
+							sectors of game development as I consider these different types of knowledge to be beneficial in my own development as a better programmer and developer
+							when I put myself in the perspective of different branches of development such as designing.<br/><br/>
+							
+							Qualifications and Skills:
+
+							<ul align="left" style="margin-left:100px;margin-top:-100px;">
+								<li>C, C++, and C# Programming</li>
+								<li>Unity</li>
+								<li>Unreal Engine</li>
+							</ul>
+
+							</p>
 
 						</div>
 					</section>
@@ -134,25 +169,7 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
-
-							<header>
-								<h2>About Me</h2>
-							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
-
-						</div>
-					</section>
+				
 
 				<!-- Contact -->
 					<section id="contact" class="four">
