--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<li><a href="https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://www.facebook.com/eryngabriel.tallador/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://github.com/eryn510" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#contact" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="eryn_gabriel_tallador@dlsu.edu.ph" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -67,7 +67,7 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Get Started!</a>
 							</footer>
 
 						</div>
@@ -81,7 +81,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/iconPic.JPG"/></a>
 
 							<p align="justify" style="margin:100px">I am Eryn Gabriel Tallador, a student from De La Salle University - Manila currently taking up Bachelor of 
 							Science in Interactive Entertainment - Major in Game Development. I am in my 3rd year of undergraduate studies
@@ -93,7 +93,7 @@
 
 							I am willing to learn from companies and professionals in my field of work to improve my skillset as a developer. I aim to explore the different
 							sectors of game development as I consider these different types of knowledge to be beneficial in my own development as a better programmer and developer
-							when I put myself in the perspective of different branches of development such as designing.<br/><br/>
+							should I put myself in the perspective of different branches of development where my interests align such as designing.<br/><br/>
 							
 							Qualifications and Skills:
 
@@ -124,44 +124,102 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/eryn510/Pokemon-Text-Based-Battle" class="image fit"><img src="images/PokemonTextBased.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Pokemon Text-Based Game</h3>
 										</header>
+										<p align="justify">
+											&nbsp A Pokemon Text-Based Battle using C. First Machine Project created. Independent Project.
+										</p>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://github.com/eryn510/Minesweeper" class="image fit"><img src="images/Minesweeper.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Minesweeper</h3>
 										</header>
+										<p align="justify">
+											&nbsp A minesweeper clone created for a machine project submission. Custom levels can be created and
+											and saved through a text file. Uses C Language. Independent Project.
+										</p>
+									</article>
+									<article class="item">
+										<a href="https://github.com/eryn510/GOG" class="image fit"><img src="images/GOG.png" alt="" /></a>
+										<header>
+											<h3>Games of the General</h3>
+										</header>
+										<p align="justify">
+											&nbsp Games of the General with AI Feature. Made for Artificial Intelligence class
+											using Unity and C#. Mainly worked on the AI and majority in the UI and Audio. Made with
+											Aldrey Gaurana
+										</p>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/LostInGunkanjima.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Lost in Gunkanjima</h3>
 										</header>
+										<p align="justify">
+											&nbsp A horror-esque game in which the main premise is to find objects and give it to the headmaster.
+											Mainly worked in the level design, lighting, terrain forming, and audio. Made by Brooklyn Studios
+											(Aldrey Gaurana, Emerson Celestial, Joseph Santos)
+										</p>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/homealonedamountains.png" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Home Alone Da Mountains</h3>
 										</header>
+										<p align="justify">
+											&nbsp A home-defense game where you repair and trap enemies. Main role is Audio Management
+											and Fatigue Mechanic. Made by Brooklyn Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos)
+										</p>
+									</article>
+									<article class="item">
+										<a href="https://github.com/eryn510/GDAPDEV_OnRails" class="image fit"><img src="images/AlchemicalBreakout.png" alt="" /></a>
+										<header>
+											<h3>Alchemical Breakout</h3>
+										</header>
+										<p align="justify">
+											&nbsp An On-Rails Shooter Game similar to House of the Dead and Time Crisis. Main Role is Level Designing, Audio
+											Management, Character On-Rails Movement using Navigation Mesh, and Enemy Spawning. Made with Aldrey Gaurana.
+										</p>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://github.com/EmersonicsDLSU/Farrago" class="image fit"><img src="images/Farrago.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Farrago</h3>
 										</header>
+										<p align="justify">
+											&nbsp A horror-esque puzzle game with the use of color mixing and problem solving. A work in progress and still
+											in the middle of Alpha and Beta Version. Main role is Audio Management, Game System (Puzzle and Inventory), UI (Main Menu, Game Main
+											UI, and Pause UI) and Graphics Settings System. Made by [AniLu] Animus Ludus Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos,
+											Ella Garcia, and Angelic Aram)
+										</p>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://drive.google.com/drive/u/1/folders/1OD73MS5FjUi4QPTFb49PD9Kt7ckgQbaf" class="image fit"><img src="images/UECHAL.png" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Unreal Challenge 1</h3>
 										</header>
+										<p align="justify">
+											&nbsp An ANNO1800 clone where we are tasked to do an efficient material production that can run without computation
+											issues. Made in Unreal Engine and C++. Independent Project.
+										</p>
+									</article>
+									<article class="item">
+										<a href="https://github.com/drei096/arvr_project" class="image fit"><img src="images/PokemonGO.jpg" alt="" /></a>
+										<header>
+											<h3>Pokemon Go Clone</h3>
+										</header>
+										<p align="justify">
+											&nbsp A Pokemon Go Clone to test features of Augmented Reality using Unity. Made in Unity, Vuforia
+											for AR System, and C#. Main Role is the entire UI System and Encounter System. Made by Brooklyn Studios
+											(Aldrey Gaurana, Emerson Celestial, Joseph Santos, Francis Santonia)
+										</p>
 									</article>
 								</div>
 							</div>
@@ -179,23 +237,12 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p align="justify">You can contact me for more details through my <br/> 
+								<b>Email address:</b> eryn_gabriel_tallador@dlsu.edu.ph <br/> 
+								<b>Facebook:</b> https://www.facebook.com/eryngabriel.tallador/ <br/>
+								<b>LinkedIn:</b> https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/ <br/>
+							</p>
 
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
 
 						</div>
 					</section>
