--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/LostInGunkanjima.png" alt="" /></a>
+										<a href="https://github.com/EmersonicsDLSU/GD-Funda_GameJam1" class="image fit"><img src="images/LostInGunkanjima.png" alt="" /></a>
 										<header>
 											<h3>Lost in Gunkanjima</h3>
 										</header>
