--- a/index.html
+++ b/index.html
@@ -116,10 +116,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p align="justify">Here are my past projects that I have worked on throughout my current 3 year stay in De La Salle University</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
