--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 										</header>
 										<p align="justify">
 											&nbsp A horror-esque game in which the main premise is to find objects and give it to the headmaster.
-											Mainly worked in the level design, lighting, terrain forming, and audio. Made by Brooklyn Studios
+											Mainly worked in the level design, lighting, terrain forming, and audio. Using Unity and C#. Made by Brooklyn Studios
 											(Aldrey Gaurana, Emerson Celestial, Joseph Santos)
 										</p>
 									</article>
@@ -170,7 +170,7 @@
 										</header>
 										<p align="justify">
 											&nbsp A home-defense game where you repair and trap enemies. Main role is Audio Management
-											and Fatigue Mechanic. Made by Brooklyn Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos)
+											and Fatigue Mechanic. Using Unity and C#. Made by Brooklyn Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos)
 										</p>
 									</article>
 									<article class="item">
@@ -180,7 +180,8 @@
 										</header>
 										<p align="justify">
 											&nbsp An On-Rails Shooter Game similar to House of the Dead and Time Crisis. Main Role is Level Designing, Audio
-											Management, Character On-Rails Movement using Navigation Mesh, and Enemy Spawning. Made with Aldrey Gaurana.
+											Management, Character On-Rails Movement using Navigation Mesh, and Enemy Spawning. Using Unity and C#. 
+											Made with Aldrey Gaurana.
 										</p>
 									</article>
 								</div>
@@ -193,7 +194,7 @@
 										<p align="justify">
 											&nbsp A horror-esque puzzle game with the use of color mixing and problem solving. A work in progress and still
 											in the middle of Alpha and Beta Version. Main role is Audio Management, Game System (Puzzle and Inventory), UI (Main Menu, Game Main
-											UI, and Pause UI) and Graphics Settings System. Made by [AniLu] Animus Ludus Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos,
+											UI, and Pause UI) and Graphics Settings System. Using Unity and C#. Made by [AniLu] Animus Ludus Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos,
 											Ella Garcia, and Angelic Aram)
 										</p>
 									</article>
