--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 										</p>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/homealonedamountains.png" alt="" /></a>
+										<a href="https://itch.io/queue/c/1963433/indie-game-jam-3-term-3-2020-2021?game_id=1197128" class="image fit"><img src="images/homealonedamountains.png" alt="" /></a>
 										<header>
 											<h3>Home Alone Da Mountains</h3>
 										</header>
