--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 											<h3>Lost in Gunkanjima</h3>
 										</header>
 										<p align="justify">
-											&nbsp A horror-esque game in which the main premise is to find objects and give it to the headmaster.
+											&nbsp A horror/suspense game in which the main premise is to find objects and give it to the headmaster.
 											Mainly worked in the level design, lighting, terrain forming, and audio. Using Unity and C#. Made by Brooklyn Studios
 											(Aldrey Gaurana, Emerson Celestial, Joseph Santos)
 										</p>
@@ -192,7 +192,7 @@
 											<h3>Farrago</h3>
 										</header>
 										<p align="justify">
-											&nbsp A horror-esque puzzle game with the use of color mixing and problem solving. A work in progress and still
+											&nbsp A suspense puzzle game with the use of color mixing and problem solving. A work in progress and still
 											in the middle of Alpha and Beta Version. Main role is Audio Management, Game System (Puzzle and Inventory), UI (Main Menu, Game Main
 											UI, and Pause UI) and Graphics Settings System. Using Unity and C#. Made by [AniLu] Animus Ludus Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos,
 											Ella Garcia, and Angelic Aram)
