--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
 							</header>
 
 							<p align="justify">You can contact me for more details through my <br/> 
-								<b>Email address:</b> eryn_gabriel_tallador@dlsu.edu.ph <br/> 
-								<b>Facebook:</b> https://www.facebook.com/eryngabriel.tallador/ <br/>
-								<b>LinkedIn:</b> https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/ <br/>
+								&nbsp<b>Email address:</b> eryn_gabriel_tallador@dlsu.edu.ph <br/> 
+								&nbsp<b>Facebook:</b> https://www.facebook.com/eryngabriel.tallador/ <br/>
+								&nbsp<b>LinkedIn:</b> https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/ <br/>
 							</p>
 
 
