--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
 
 							<a href="#" class="image featured"><img src="images/iconPic.JPG"/></a>
 
-							<p align="justify">&nbsp I am Eryn Gabriel Tallador, a student from De La Salle University - Manila currently taking up Bachelor of 
+							<p align="justify" style="margin:100px">I am Eryn Gabriel Tallador, a student from De La Salle University - Manila currently taking up Bachelor of 
 							Science in Interactive Entertainment - Major in Game Development. I am in my 3rd year of undergraduate studies
 							with a CGPA of 3.446 and is expected to graduate in 2024.<br/><br/>
 
-							&nbsp In our projects, I take pride on working with the frontend and backend. I mainly work on the User Interface
+							In our projects, I take pride on working with the frontend and backend. I mainly work on the User Interface
 							and Audio Management in our projects although I also help out in coding the logic behind our games and layout ideas
 							that would help the team in designing logic for futureproofing.<br/><br/>
 
-							&nbsp I am willing to learn from companies and professionals in my field of work to improve my skillset as a developer. I aim to explore the different
+							I am willing to learn from companies and professionals in my field of work to improve my skillset as a developer. I aim to explore the different
 							sectors of game development as I consider these different types of knowledge to be beneficial in my own development as a better programmer and developer
 							should I put myself in the perspective of different branches of development where my interests align such as designing.<br/><br/>
 							
@@ -236,9 +236,9 @@
 							</header>
 
 							<p align="justify">You can contact me for more details through my <br/> 
-								&nbsp<b>Email address:</b> eryn_gabriel_tallador@dlsu.edu.ph <br/> 
-								&nbsp<b>Facebook:</b> https://www.facebook.com/eryngabriel.tallador/ <br/>
-								&nbsp<b>LinkedIn:</b> https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/ <br/>
+								<b>Email address:</b> eryn_gabriel_tallador@dlsu.edu.ph <br/> 
+								<b>Facebook:</b> https://www.facebook.com/eryngabriel.tallador/ <br/>
+								<b>LinkedIn:</b> https://www.linkedin.com/in/eryn-gabriel-tallador-4920691b9/ <br/>
 							</p>
 
 
