--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<p>I am a 3rd year student from De La Salle University, currently taking up <br />
 								Bachelor of Science in Interactive Entertainment - Major in Game Development. <br />
 								I am eager to learn new techniques and coding architectures that would further <br/>
-								improve  my skill not only as a game developer, but also as a general developer.</p>
+								improve  my skill not only as a game developer but also as a general developer.</p>
 							</header>
 
 							<footer>
@@ -85,7 +85,7 @@
 
 							<p align="justify" style="margin:100px">I am Eryn Gabriel Tallador, a student from De La Salle University - Manila currently taking up Bachelor of 
 							Science in Interactive Entertainment - Major in Game Development. I am in my 3rd year of undergraduate studies
-							with a CGPA of 3.446 and is expected to graduate in 2024.<br/><br/>
+							with a CGPA of 3.446 and am expected to graduate in 2024.<br/><br/>
 
 							In our projects, I take pride on working with the frontend and backend. I mainly work on the User Interface
 							and Audio Management in our projects although I also help out in coding the logic behind our games and layout ideas
@@ -164,7 +164,7 @@
 										</p>
 									</article>
 									<article class="item">
-										<a href="https://itch.io/queue/c/1963433/indie-game-jam-3-term-3-2020-2021?game_id=1197128" class="image fit"><img src="images/homealonedamountains.png" alt="" /></a>
+										<a href="https://github.com/EmersonicsDLSU/GD-Funda_GameJam2" class="image fit"><img src="images/homealonedamountains.png" alt="" /></a>
 										<header>
 											<h3>Home Alone Da Mountains</h3>
 										</header>
