--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 							<a href="#" class="image featured"><img src="images/iconPic.JPG"/></a>
 
 							<p align="justify" style="margin:100px">I am Eryn Gabriel Tallador, a student from De La Salle University - Manila currently taking up Bachelor of 
-							Science in Interactive Entertainment - Major in Game Development. I am in my 3rd year of undergraduate studies
-							with a CGPA of 3.446 and am expected to graduate in 2024.<br/><br/>
+							Science in Interactive Entertainment - Major in Game Development. I am in my 4th year of undergraduate studies
+							with a CGPA of 3.491 and am expected to graduate in 2024.<br/><br/>
 
 							In our projects, I take pride on working with the frontend and backend. I mainly work on the User Interface
 							and Audio Management in our projects although I also help out in coding the logic behind our games and layout ideas
