added Game Engine

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
 											Aldrey Gaurana
 										</p>
 									</article>
+									<article class="item">
+										<a href="https://github.com/EmersonicsDLSU/GD-ENG2-MO-Engine-Features-Replication" class="image fit"><img src="images/GameEngine.png" alt="" /></a>
+										<header>
+											<h3>DirectX11 Game Engine</h3>
+										</header>
+										<p align="justify">
+											&nbsp Game Engine created using DirectX11 and reactphysics3D using raw C++.
+											Made with Emerson Celestial, Aldrey Gaurana, and Joseph Santos
+										</p>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
