added seaker and parcm hands-on

--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
 											Made with Emerson Celestial, Aldrey Gaurana, and Joseph Santos
 										</p>
 									</article>
+									<article class="item">
+										<a href="https://github.com/eryn510/GDPARCM_Hands-On" class="image fit"><img src="images/GDPARCM_Hands-On.png" alt="" /></a>
+										<header>
+											<h3>Multi-Threaded Searcher, Deleter, Inserter</h3>
+										</header>
+										<p align="justify">
+											&nbsp Multi-Threaded Searcher, Deleter, Inserter made for subject finals. Uses SFML for images and C++ as main language.
+											Created using semaphores.
+										</p>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -192,6 +202,16 @@
 											&nbsp An On-Rails Shooter Game similar to House of the Dead and Time Crisis. Main Role is Level Designing, Audio
 											Management, Character On-Rails Movement using Navigation Mesh, and Enemy Spawning. Using Unity and C#. 
 											Made with Aldrey Gaurana.
+										</p>
+									</article>
+									<article class="item">
+										<a href="https://seakergame.my.canva.site/" class="image fit"><img src="images/SEAker.png" alt="" /></a>
+										<header>
+											<h3>SEAker</h3>
+										</header>
+										<p align="justify">
+											&nbsp A 3D Hidden Objects Advocacy Game for Philippine Marine Ecosystems, Habitat Threats,
+											and Marine Life. Capstone Project made with AniLu Team.
 										</p>
 									</article>
 								</div>
