--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm Eryn Gabriel Tallador</h2>
-								<p>I am a 3rd year student from De La Salle University, currently taking up <br />
+								<p>I am a 4th year student from De La Salle University, currently taking up <br />
 								Bachelor of Science in Interactive Entertainment - Major in Game Development. <br />
 								I am eager to learn new techniques and coding architectures that would further <br/>
 								improve  my skill not only as a game developer but also as a general developer.</p>
