--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 										</header>
 										<p align="justify">
 											&nbsp Game Engine created using DirectX11 and reactphysics3D using raw C++.
-											Made with Emerson Celestial, Aldrey Gaurana, and Joseph Santos
+											Made with Emerson Celestial, Aldrey Gaurana, and Joseph Santos.
 										</p>
 									</article>
 									<article class="item">
@@ -167,7 +167,7 @@
 										</header>
 										<p align="justify">
 											&nbsp Multi-Threaded Searcher, Deleter, Inserter made for subject finals. Uses SFML for images and C++ as main language.
-											Created using semaphores.
+											Created using semaphores. Independent Project.
 										</p>
 									</article>
 								</div>
@@ -211,7 +211,8 @@
 										</header>
 										<p align="justify">
 											&nbsp A 3D Hidden Objects Advocacy Game for Philippine Marine Ecosystems, Habitat Threats,
-											and Marine Life. Capstone Project made with AniLu Team.
+											and Marine Life. Capstone Project made with [AniLu] Animus Ludus Studios (Aldrey Gaurana, Emerson Celestial, Joseph Santos,
+											Ella Garcia, and Angelic Aram)
 										</p>
 									</article>
 								</div>
