--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@
 											Created using semaphores. Independent Project.
 										</p>
 									</article>
+								</article>
+								<article class="item">
+									<a href="https://github.com/Rytorc/UNITY_TEMPLATE" class="image fit"><img src="images/UNITY.png" alt="" /></a>
+									<header>
+										<h3>Unity Personal Template</h3>
+									</header>
+									<p align="justify">
+										&nbsp My personal template for Unity. Made to practice.
+									</p>
+								</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
